// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`listStyle renders 0 1`] = `
Array [
  .c0 {
  list-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyle renders function 1`] = `
Array [
  .c0 {
  list-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: has;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: has;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyle renders invalid theme path 1`] = `
Array [
  .c0 {
  list-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyle renders negative number 1`] = `
Array [
  .c0 {
  list-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyle renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    list-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    list-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    list-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    list-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`listStyle renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    list-style: July;
  }
}

@media April {
  .c0 {
    list-style: August;
  }
}

@media January {
  .c0 {
    list-style: September;
  }
}

@media April {
  .c0 {
    list-style: November;
  }
}

@media June {
  .c0 {
    list-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    list-style: July;
  }
}

@media April {
  .c0 {
    list-style: August;
  }
}

@media January {
  .c0 {
    list-style: September;
  }
}

@media April {
  .c0 {
    list-style: November;
  }
}

@media June {
  .c0 {
    list-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    list-style: January;
  }
}

@media April {
  .c0 {
    list-style: December;
  }
}

@media January {
  .c0 {
    list-style: April;
  }
}

@media April {
  .c0 {
    list-style: May;
  }
}

@media June {
  .c0 {
    list-style: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    list-style: January;
  }
}

@media April {
  .c0 {
    list-style: December;
  }
}

@media January {
  .c0 {
    list-style: April;
  }
}

@media April {
  .c0 {
    list-style: May;
  }
}

@media June {
  .c0 {
    list-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`listStyle renders postitive number 1`] = `
Array [
  .c0 {
  list-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyle renders string 1`] = `
Array [
  .c0 {
  list-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: June;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: June;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyle renders valid theme path 1`] = `
Array [
  .c0 {
  list-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  list-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
